unpackaged/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Description__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>