unpackaged/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Launch_CM8__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Launch_CM8__c</fullName>
    <description>IF( 
 OR(Weblink_ID__c = null, Weblink_ID__c = ''), 

 IMAGE( "/resource/DisabledLaunchButton", "Launch Disabled"),

 HYPERLINK("https://" &amp; MID( $Api.Enterprise_Server_URL_320, FIND("://", $Api.Enterprise_Server_URL_100)+3, FIND( ".com", $Api.Enterprise_Server_URL_100 )-4) 
 &amp; "servlet/servlet.Integration?lid=" &amp; Weblink_ID__c 
 &amp; "&amp;eid=" &amp; Id &amp; "&amp;ic=1" 
 , IMAGE( "/resource/APXTConga4__ComposerLaunchButton" , "Launch Composer"), "_blank" )
)</description>
    <formula>IF( 
 OR(APXTConga4__Weblink_ID__c = null, APXTConga4__Weblink_ID__c = ''), 

 IMAGE( "/resource/DisabledLaunchButton", "Launch Disabled"),

 HYPERLINK("/apex/APXTConga4__SMComposer8Launcher?SampleRecordId=" &amp; Id &amp; "&amp;WeblinkId=" &amp; APXTConga4__Weblink_ID__c &amp; "&amp;SMRecordId=" &amp; APXTConga4__Conga_Solution__r.Id &amp; "&amp;OrganizationId=" &amp; $Organization.Id
 , IMAGE( "/resource/APXTConga4__ComposerLaunchButton" , "Launch Composer"), "_blank" ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this button to launch the Composer QuickMerge Solution. Only available when the Button ID field is populated.</inlineHelpText>
    <label>Launch</label>
    <type>Text</type>
</CustomField>