unpackaged/main/default/objects/APXTConga4__Composer_QuickMerge__c/listViews/APXTConga4__All.listView-meta.xml
<ListView>
    <fullName>APXTConga4__All</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Weblink_Name_Formula__c</columns>
    <columns>APXTConga4__Conga_Solution__c</columns>
    <columns>APXTConga4__Weblink_ID_Formula__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>APXTConga4__Launch_CM8__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>